Chave estrangeira não nula (integridade referencial)

--- a/SalesCurso/Views/Sellers/Index.cshtml
+++ b/SalesCurso/Views/Sellers/Index.cshtml
@@ -9,6 +9,10 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create" type="button" class="btn btn-primary">Create New</a>
+</p>
+
 <table class="table trable-striped table-hover">
     <thead>
         <tr class="success">
