--- a/SalesCurso/Views/Sellers/Index.cshtml
+++ b/SalesCurso/Views/Sellers/Index.cshtml
@@ -2,24 +2,23 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @model IEnumerable<SalesCurso.Models.Seller>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Sellers";
 }
 
 <h2>@ViewData["Title"]</h2>
 
 <p>
-    <a asp-action="Create" type="button" class="btn btn-primary">Create New</a>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
 </p>
 
-<table class="table trable-striped table-hover">
+<table class="table table-striped table-hover">
     <thead>
         <tr class="success">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-                        <th>
+            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -28,6 +27,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -47,13 +47,13 @@
                     @Html.DisplayFor(modelItem => item.BaseSalary)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-itemid="@item.Id">Edit</a>
-                    <a asp-action="Edit" asp-route-itemid="@item.Id">Details</a>
-                    <a asp-action="Edit" asp-route-itemid="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
+
         }
     </tbody>
-</table>
 
-<p>Selles index page</p>
+</table>
